# Raft-consensus

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  test_runner.sh  tmp_log_out
src/: client.cpp  client.hh  cmd_handlers.cpp  main.cpp  message_handlers.cpp  repl.cpp  repl.hh  repl_handlers.cpp  repl_process.cpp  repl_process.hh  rpc_handlers.cpp  server.cpp  server.h  server.hh  worlds_info.cpp  worlds_info.hh
src/messages/: CMakeLists.txt  message.cpp  message.hh  mpi_.cpp  mpi_.hh  mpi_wrappers.cpp  mpi_wrappers.hh  raftVote.cpp  raftVote.hh  redirect.cpp  redirect.hh  responseToClient.cpp  responseToClient.hh  status.cpp  status.hh
src/messages/CMD/: append.cpp  append.hh  appendResponse.cpp  appendResponse.hh  delete.cpp  delete.hh  deleteResponse.cpp  deleteResponse.hh  list.cpp  list.hh  listResponse.cpp  listResponse.hh  load.cpp  load.hh  loadResponse.cpp  loadResponse.hh
src/messages/REPL/: crash.cpp  crash.hh  info.cpp  info.hh  recovery.cpp  recovery.hh  speed.cpp  speed.hh  start.cpp  start.hh  stop.cpp  stop.hh
src/messages/RPC/: appendEntries.cpp  appendEntries.hh  appendEntriesResponse.cpp  appendEntriesResponse.hh  requestVote.cpp  requestVote.hh  vote.cpp  vote.hh
src/utils/: CMakeLists.txt  logs.cpp  logs.hh
tests/: one_client1.in  one_client1.out  one_client2.out  one_client3.out  test1.in  test2.in  test3.in  test4.in  test5.in  test5.out  two_client1.out
